objects/zkmulti__MCShipment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Wyoming__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Wyoming</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Account_Wyoming)</relationshipLabel>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Account)</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shipments (Opportunity)</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Actual_Delivery_Date__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Account_Number__c</fullName>
        <label>Billing Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Bulk_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Shipment</label>
        <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency__c</fullName>
        <label>Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeliveryDayOfWeek__c</fullName>
        <label>Delivery Day of Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeliveryInstructions__c</fullName>
        <label>Delivery Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeliveryTransitTime__c</fullName>
        <label>Delivery Transit Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Delivery_Date__c</fullName>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Delivery_Time__c</fullName>
        <label>Estimated Delivery Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dimension_Units__c</fullName>
        <label>Dimension Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__DropoffType__c</fullName>
        <label>Dropoff Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnDeliveryAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnExceptionAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailRecipient1__c</fullName>
        <label>Email Recipient 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailRecipient2__c</fullName>
        <label>Email Recipient 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailRecipient3__c</fullName>
        <label>Email Recipient 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailMessage__c</fullName>
        <label>Email Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Type__c</fullName>
        <label>Label Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>ZPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Last_Track_Update_Time__c</fullName>
        <label>Last Track Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Multi_Package_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidation</label>
        <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__NegotiatedRatesGrandTotal__c</fullName>
        <label>Negotiated Rates Grand Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Type__c</fullName>
        <label>Package Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Multi Carrier Pickup</label>
        <referenceTo>zkmulti__MCPickup__c</referenceTo>
        <relationshipName>Multi_Carrier_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Address_is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Company__c</fullName>
        <label>Recipient Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_State_Province__c</fullName>
        <label>Recipient State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Street__c</fullName>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Zip_Postal_Code__c</fullName>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference1_Type__c</fullName>
        <label>Reference 1 Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference1_Value__c</fullName>
        <label>Reference 1 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference2_Type__c</fullName>
        <label>Reference 2 Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference2_Value__c</fullName>
        <label>Reference 2 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference3_Type__c</fullName>
        <label>Reference 3 Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference3_Value__c</fullName>
        <label>Reference 3 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Line</label>
        <referenceTo>zkmulti__MCQueued_Customs_Item__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Address_is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_City__c</fullName>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Company__c</fullName>
        <label>Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Country__c</fullName>
        <label>Sender Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Phone__c</fullName>
        <label>Sender Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_State_Province__c</fullName>
        <label>Sender State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Street__c</fullName>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Zip_Postal_Code__c</fullName>
        <label>Sender Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Service_Type_Name__c</fullName>
        <label>Service Type Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Service_Type__c</fullName>
        <label>Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipmate_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Preference</label>
        <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__ShipmentDescription__c</fullName>
        <label>Shipment Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ShipmentStatus__c</fullName>
        <label>Shipment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Info</label>
        <referenceTo>zkmulti__MCShipmentInfo__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Notes__c</fullName>
        <label>Shipment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Processing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Processing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignedForBy__c</fullName>
        <label>Signed For By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status_Description__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalBaseCharge__c</fullName>
        <label>Total Base Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalDiscounts__c</fullName>
        <label>Total Discounts</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalNetCharge__c</fullName>
        <label>Total Net Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalSurchargeDescriptions__c</fullName>
        <label>Total Surcharge Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalSurcharges__c</fullName>
        <label>Total Surcharges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalTaxes__c</fullName>
        <label>Total Taxes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Tracker_Id__c</fullName>
        <label>Last Mile Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Tracking_Stage__c</fullName>
        <label>Tracking Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picked Up</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__TransportationCharges__c</fullName>
        <label>Transportation Charges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__User_Allowed_Edit_of_Recipient_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Allowed Edit of Recipient Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>Nolan_Daigle_MCShipment</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>zkmulti__Recipient_Name__c</columns>
        <columns>zkmulti__Mod_Key__c</columns>
        <columns>zkmulti__Tracking_Number__c</columns>
        <columns>zkmulti__Carrier__c</columns>
        <columns>zkmulti__Delivered__c</columns>
        <columns>zkmulti__Ship_Date__c</columns>
        <columns>zkmulti__Recipient_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zkmulti__DHL</fullName>
        <columns>NAME</columns>
        <columns>zkmulti__Carrier__c</columns>
        <columns>zkmulti__Shipment_Deleted__c</columns>
        <columns>zkmulti__Return_Shipment__c</columns>
        <columns>zkmulti__Delivered__c</columns>
        <columns>zkmulti__Tracking_Number__c</columns>
        <columns>zkmulti__Label_Image_Type__c</columns>
        <columns>zkmulti__Ship_Date__c</columns>
        <columns>zkmulti__Package_Type__c</columns>
        <columns>zkmulti__Service_Type_Name__c</columns>
        <columns>zkmulti__Recipient_Account__c</columns>
        <columns>zkmulti__Recipient_Opportunity__c</columns>
        <columns>zkmulti__Recipient_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkmulti__Carrier__c</field>
            <operation>contains</operation>
            <value>dhl</value>
        </filters>
        <label>DHL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Shipment-{00000000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>